Updated to use livequery.
When javascript dynamically introduces a new link, it should
be automatically bound to.

--- a/yt-hover/manifest.json
+++ b/yt-hover/manifest.json
@@ -5,6 +5,7 @@
       "include_globs": [  ],
       "js": [ "jquery.min.js",
               "jquery.hoverIntent.min.js",
+              "jquery.livequery.min.js",
               "parseuri.js",
               "yt-hover.user.js" ],
       "matches": [ "http://*/*", "https://*/*" ],
