Refactored out Youtube functionality.
Adding any api (subject to cross-origin policy, unfortunately)
is as simple as calling the add_link_preview function with the
required parameters in a new .js file and adding it to the
manifest.

--- a/link-preview/manifest.json
+++ b/link-preview/manifest.json
@@ -7,7 +7,9 @@
               "jquery.hoverIntent.min.js",
               "jquery.livequery.min.js",
               "parseuri.js",
-              "yt-hover.user.js" ],
+              "link-preview.user.js",
+              "youtube.js",
+              "default.js"],
       "matches": [ "http://*/*", "https://*/*" ],
       "run_at": "document_idle"
    } ],
@@ -15,5 +17,5 @@
    "content_security_policy": "img-src https://i.ytimg.com",
    "description": "Add video title and description under youtube links.",
    "name": "Video Hovercard",
-   "version": "1.2"
+   "version": "1.3"
 }
